src/cffi/classes/wxEvent.lisp


;;;wxEvent.lisp
;;;License  : wxWindows License 3.1
;;;Author(s) : Surendra Singhi (surendra@asu.edu) 
;;;Copyright (C) 2005 Surendra Singhi 
;;;See the file LICENSE for information on usage and redistribution.
;;;
;;; $Header$
;;;

(in-package :wxcl)




(cffi:defcfun ("wxCommandEvent_Create" wxCommandEvent_Create) :pointer
  (_typ :int)
  (_id :int))

(cffi:defcfun ("wxCommandEvent_Delete" wxCommandEvent_Delete) :void
  (_obj :pointer))

(cffi:defcfun ("wxEvent_GetTimestamp" wxEvent_GetTimestamp) :long
  (_obj :pointer))

(cffi:defcfun ("wxEvent_Skip" wxEvent_Skip) :void
  (_obj :pointer))

(cffi:defcfun ("wxEvent_GetEventType" wxEvent_GetEventType) :int
  (_obj :pointer))

(cffi:defcfun ("wxEvent_SetEventType" wxEvent_SetEventType) :void
  (_obj :pointer)
  (typ :int))

(cffi:defcfun ("wxEvent_GetEventObject" wxEvent_GetEventObject) :pointer
  (_obj :pointer))

(cffi:defcfun ("wxEvent_SetEventObject" wxEvent_SetEventObject) :void
  (_obj :pointer)
  (obj :pointer))

(cffi:defcfun ("wxEvent_SetTimestamp" wxEvent_SetTimestamp) :void
  (_obj :pointer)
  (ts :long))

(cffi:defcfun ("wxEvent_GetId" wxEvent_GetId) :int
  (_obj :pointer))

(cffi:defcfun ("wxEvent_SetId" wxEvent_SetId) :void
  (_obj :pointer)
  (Id :int))

(cffi:defcfun ("wxEvent_GetSkipped" wxEvent_GetSkipped) :int
  (_obj :pointer))

(cffi:defcfun ("wxEvent_IsCommandEvent" wxEvent_IsCommandEvent) :int
  (_obj :pointer))

(cffi:defcfun ("wxEvent_Clone" wxEvent_Clone) :pointer
  (_obj :pointer))

(cffi:defcfun ("wxEvent_SetCallbackUserData" wxEvent_SetCallbackUserData) :void
  (_obj :pointer)
  (obj :pointer))

(cffi:defcfun ("wxEvent_GetCallbackUserData" wxEvent_GetCallbackUserData) :pointer
  (_obj :pointer))

(cffi:defcfun ("wxCommandEvent_SetClientData" wxCommandEvent_SetClientData) :void
  (_obj :pointer)
  (clientData :pointer))

(cffi:defcfun ("wxCommandEvent_GetClientData" wxCommandEvent_GetClientData) :pointer
  (_obj :pointer))

(cffi:defcfun ("wxCommandEvent_SetClientObject" wxCommandEvent_SetClientObject) :void
  (_obj :pointer)
  (clientObject :pointer))

(cffi:defcfun ("wxCommandEvent_GetClientObject" wxCommandEvent_GetClientObject) :pointer
  (_obj :pointer))

(cffi:defcfun ("wxCommandEvent_GetSelection" wxCommandEvent_GetSelection) :int
  (_obj :pointer))

(cffi:defcfun ("wxCommandEvent_SetString" wxCommandEvent_SetString) :void
  (_obj :pointer)
  (s :string))

(cffi:defcfun ("wxCommandEvent_GetString" wxCommandEvent_GetString) :wxstring
  (_obj :pointer))

(cffi:defcfun ("wxCommandEvent_IsChecked" wxCommandEvent_IsChecked) :int
  (_obj :pointer))

(cffi:defcfun ("wxCommandEvent_IsSelection" wxCommandEvent_IsSelection) :int
  (_obj :pointer))

(cffi:defcfun ("wxCommandEvent_SetExtraLong" wxCommandEvent_SetExtraLong) :void
  (_obj :pointer)
  (extraLong :long))

(cffi:defcfun ("wxCommandEvent_GetExtraLong" wxCommandEvent_GetExtraLong) :long
  (_obj :pointer))

(cffi:defcfun ("wxCommandEvent_SetInt" wxCommandEvent_SetInt) :void
  (_obj :pointer)
  (i :int))

(cffi:defcfun ("wxCommandEvent_GetInt" wxCommandEvent_GetInt) :int
  (_obj :pointer))

(cffi:defcfun ("wxNotifyEvent_Veto" wxNotifyEvent_Veto) :void
  (_obj :pointer))

(cffi:defcfun ("wxNotifyEvent_Allow" wxNotifyEvent_Allow) :void
  (_obj :pointer))

(cffi:defcfun ("wxNotifyEvent_IsAllowed" wxNotifyEvent_IsAllowed) :int
  (_obj :pointer))

(cffi:defcfun ("wxScrollWinEvent_GetOrientation" wxScrollWinEvent_GetOrientation) :int
  (_obj :pointer))

(cffi:defcfun ("wxScrollWinEvent_GetPosition" wxScrollWinEvent_GetPosition) :int
  (_obj :pointer))

(cffi:defcfun ("wxScrollWinEvent_SetOrientation" wxScrollWinEvent_SetOrientation) :void
  (_obj :pointer)
  (orient :int))

(cffi:defcfun ("wxScrollWinEvent_SetPosition" wxScrollWinEvent_SetPosition) :void
  (_obj :pointer)
  (pos :int))

(cffi:defcfun ("wxMouseEvent_IsButton" wxMouseEvent_IsButton) :int
  (_obj :pointer))

(cffi:defcfun ("wxMouseEvent_ButtonDown" wxMouseEvent_ButtonDown) :int
  (_obj :pointer)
  (but :int))

(cffi:defcfun ("wxMouseEvent_ButtonDClick" wxMouseEvent_ButtonDClick) :int
  (_obj :pointer)
  (but :int))

(cffi:defcfun ("wxMouseEvent_ButtonUp" wxMouseEvent_ButtonUp) :int
  (_obj :pointer)
  (but :int))

(cffi:defcfun ("wxMouseEvent_Button" wxMouseEvent_Button) :int
  (_obj :pointer)
  (but :int))

(cffi:defcfun ("wxMouseEvent_ButtonIsDown" wxMouseEvent_ButtonIsDown) :int
  (_obj :pointer)
  (but :int))

(cffi:defcfun ("wxMouseEvent_ControlDown" wxMouseEvent_ControlDown) :int
  (_obj :pointer))

(cffi:defcfun ("wxMouseEvent_MetaDown" wxMouseEvent_MetaDown) :int
  (_obj :pointer))

(cffi:defcfun ("wxMouseEvent_AltDown" wxMouseEvent_AltDown) :int
  (_obj :pointer))

(cffi:defcfun ("wxMouseEvent_ShiftDown" wxMouseEvent_ShiftDown) :int
  (_obj :pointer))

(cffi:defcfun ("wxMouseEvent_LeftDown" wxMouseEvent_LeftDown) :int
  (_obj :pointer))

(cffi:defcfun ("wxMouseEvent_MiddleDown" wxMouseEvent_MiddleDown) :int
  (_obj :pointer))

(cffi:defcfun ("wxMouseEvent_RightDown" wxMouseEvent_RightDown) :int
  (_obj :pointer))

(cffi:defcfun ("wxMouseEvent_LeftUp" wxMouseEvent_LeftUp) :int
  (_obj :pointer))

(cffi:defcfun ("wxMouseEvent_MiddleUp" wxMouseEvent_MiddleUp) :int
  (_obj :pointer))

(cffi:defcfun ("wxMouseEvent_RightUp" wxMouseEvent_RightUp) :int
  (_obj :pointer))

(cffi:defcfun ("wxMouseEvent_LeftDClick" wxMouseEvent_LeftDClick) :int
  (_obj :pointer))

(cffi:defcfun ("wxMouseEvent_MiddleDClick" wxMouseEvent_MiddleDClick) :int
  (_obj :pointer))

(cffi:defcfun ("wxMouseEvent_RightDClick" wxMouseEvent_RightDClick) :int
  (_obj :pointer))

(cffi:defcfun ("wxMouseEvent_LeftIsDown" wxMouseEvent_LeftIsDown) :int
  (_obj :pointer))

(cffi:defcfun ("wxMouseEvent_MiddleIsDown" wxMouseEvent_MiddleIsDown) :int
  (_obj :pointer))

(cffi:defcfun ("wxMouseEvent_RightIsDown" wxMouseEvent_RightIsDown) :int
  (_obj :pointer))

(cffi:defcfun ("wxMouseEvent_Dragging" wxMouseEvent_Dragging) :int
  (_obj :pointer))

(cffi:defcfun ("wxMouseEvent_Moving" wxMouseEvent_Moving) :int
  (_obj :pointer))

(cffi:defcfun ("wxMouseEvent_Entering" wxMouseEvent_Entering) :int
  (_obj :pointer))

(cffi:defcfun ("wxMouseEvent_Leaving" wxMouseEvent_Leaving) :int
  (_obj :pointer))

(cffi:defcfun ("wxMouseEvent_GetPosition" wxMouseEvent_GetPosition) :void
  (_obj :pointer)
  (xpos :pointer)
  (ypos :pointer))

(cffi:defcfun ("wxMouseEvent_GetLogicalPosition" wxMouseEvent_GetLogicalPosition) :void
  (_obj :pointer)
  (dc :pointer)
  (xpos :pointer)
  (ypos :pointer))

(cffi:defcfun ("wxMouseEvent_GetX" wxMouseEvent_GetX) :int
  (_obj :pointer))

(cffi:defcfun ("wxMouseEvent_GetY" wxMouseEvent_GetY) :int
  (_obj :pointer))

(cffi:defcfun ("wxSetCursorEvent_GetX" wxSetCursorEvent_GetX) :int
  (_obj :pointer))

(cffi:defcfun ("wxSetCursorEvent_GetY" wxSetCursorEvent_GetY) :int
  (_obj :pointer))

(cffi:defcfun ("wxSetCursorEvent_SetCursor" wxSetCursorEvent_SetCursor) :void
  (_obj :pointer)
  (cursor :pointer))

(cffi:defcfun ("wxSetCursorEvent_GetCursor" wxSetCursorEvent_GetCursor) :pointer
  (_obj :pointer))

(cffi:defcfun ("wxSetCursorEvent_HasCursor" wxSetCursorEvent_HasCursor) :int
  (_obj :pointer))

(cffi:defcfun ("wxKeyEvent_ControlDown" wxKeyEvent_ControlDown) :int
  (_obj :pointer))

(cffi:defcfun ("wxKeyEvent_MetaDown" wxKeyEvent_MetaDown) :int
  (_obj :pointer))

(cffi:defcfun ("wxKeyEvent_AltDown" wxKeyEvent_AltDown) :int
  (_obj :pointer))

(cffi:defcfun ("wxKeyEvent_ShiftDown" wxKeyEvent_ShiftDown) :int
  (_obj :pointer))

(cffi:defcfun ("wxKeyEvent_HasModifiers" wxKeyEvent_HasModifiers) :int
  (_obj :pointer))

(cffi:defcfun ("wxKeyEvent_GetKeyCode" wxKeyEvent_GetKeyCode) :int
  (_obj :pointer))

(cffi:defcfun ("wxKeyEvent_SetKeyCode" wxKeyEvent_SetKeyCode) :void
  (_obj :pointer)
  (code :int))

(cffi:defcfun ("wxKeyEvent_GetPosition" wxKeyEvent_GetPosition) :void
  (_obj :pointer)
  (xpos :pointer)
  (ypos :pointer))

(cffi:defcfun ("wxKeyEvent_GetX" wxKeyEvent_GetX) :int
  (_obj :pointer))

(cffi:defcfun ("wxKeyEvent_GetY" wxKeyEvent_GetY) :int
  (_obj :pointer))

(cffi:defcfun ("wxSizeEvent_GetSize" wxSizeEvent_GetSize) :void
  (_obj :pointer)
  (w :pointer)
  (h :pointer))

(cffi:defcfun ("wxMoveEvent_GetPosition" wxMoveEvent_GetPosition) :void
  (_obj :pointer)
  (x :pointer)
  (y :pointer))

(cffi:defcfun ("wxEraseEvent_GetDC" wxEraseEvent_GetDC) :pointer
  (_obj :pointer))

(cffi:defcfun ("wxActivateEvent_GetActive" wxActivateEvent_GetActive) :int
  (_obj :pointer))

(cffi:defcfun ("wxMenuEvent_GetMenuId" wxMenuEvent_GetMenuId) :int
  (_obj :pointer))

(cffi:defcfun ("wxCloseEvent_SetLoggingOff" wxCloseEvent_SetLoggingOff) :void
  (_obj :pointer)
  (logOff :int))

(cffi:defcfun ("wxCloseEvent_GetLoggingOff" wxCloseEvent_GetLoggingOff) :int
  (_obj :pointer))

(cffi:defcfun ("wxCloseEvent_Veto" wxCloseEvent_Veto) :void
  (_obj :pointer)
  (veto :int))

(cffi:defcfun ("wxCloseEvent_SetCanVeto" wxCloseEvent_SetCanVeto) :void
  (_obj :pointer)
  (canVeto :int))

(cffi:defcfun ("wxCloseEvent_CanVeto" wxCloseEvent_CanVeto) :int
  (_obj :pointer))

(cffi:defcfun ("wxCloseEvent_GetVeto" wxCloseEvent_GetVeto) :int
  (_obj :pointer))

(cffi:defcfun ("wxShowEvent_SetShow" wxShowEvent_SetShow) :void
  (_obj :pointer)
  (show :int))

(cffi:defcfun ("wxShowEvent_GetShow" wxShowEvent_GetShow) :int
  (_obj :pointer))

(cffi:defcfun ("wxJoystickEvent_GetPosition" wxJoystickEvent_GetPosition) :void
  (_obj :pointer)
  (x :pointer)
  (y :pointer))

(cffi:defcfun ("wxJoystickEvent_GetZPosition" wxJoystickEvent_GetZPosition) :int
  (_obj :pointer))

(cffi:defcfun ("wxJoystickEvent_GetButtonState" wxJoystickEvent_GetButtonState) :int
  (_obj :pointer))

(cffi:defcfun ("wxJoystickEvent_GetButtonChange" wxJoystickEvent_GetButtonChange) :int
  (_obj :pointer))

(cffi:defcfun ("wxJoystickEvent_GetJoystick" wxJoystickEvent_GetJoystick) :int
  (_obj :pointer))

(cffi:defcfun ("wxJoystickEvent_SetJoystick" wxJoystickEvent_SetJoystick) :void
  (_obj :pointer)
  (stick :int))

(cffi:defcfun ("wxJoystickEvent_SetButtonState" wxJoystickEvent_SetButtonState) :void
  (_obj :pointer)
  (state :int))

(cffi:defcfun ("wxJoystickEvent_SetButtonChange" wxJoystickEvent_SetButtonChange) :void
  (_obj :pointer)
  (change :int))

(cffi:defcfun ("wxJoystickEvent_SetPosition" wxJoystickEvent_SetPosition) :void
  (_obj :pointer)
  (pos :pointer))

(cffi:defcfun ("wxJoystickEvent_SetZPosition" wxJoystickEvent_SetZPosition) :void
  (_obj :pointer)
  (zPos :int))

(cffi:defcfun ("wxJoystickEvent_IsButton" wxJoystickEvent_IsButton) :int
  (_obj :pointer))

(cffi:defcfun ("wxJoystickEvent_IsMove" wxJoystickEvent_IsMove) :int
  (_obj :pointer))

(cffi:defcfun ("wxJoystickEvent_IsZMove" wxJoystickEvent_IsZMove) :int
  (_obj :pointer))

(cffi:defcfun ("wxJoystickEvent_ButtonDown" wxJoystickEvent_ButtonDown) :int
  (_obj :pointer)
  (but :int))

(cffi:defcfun ("wxJoystickEvent_ButtonUp" wxJoystickEvent_ButtonUp) :int
  (_obj :pointer)
  (but :int))

(cffi:defcfun ("wxJoystickEvent_ButtonIsDown" wxJoystickEvent_ButtonIsDown) :int
  (_obj :pointer)
  (but :int))

(cffi:defcfun ("wxUpdateUIEvent_GetChecked" wxUpdateUIEvent_GetChecked) :int
  (_obj :pointer))

(cffi:defcfun ("wxUpdateUIEvent_GetEnabled" wxUpdateUIEvent_GetEnabled) :int
  (_obj :pointer))

(cffi:defcfun ("wxUpdateUIEvent_GetText" wxUpdateUIEvent_GetText) :int
  (_obj :pointer)
  (_buf :pointer))

(cffi:defcfun ("wxUpdateUIEvent_GetSetText" wxUpdateUIEvent_GetSetText) :int
  (_obj :pointer))

(cffi:defcfun ("wxUpdateUIEvent_GetSetChecked" wxUpdateUIEvent_GetSetChecked) :int
  (_obj :pointer))

(cffi:defcfun ("wxUpdateUIEvent_GetSetEnabled" wxUpdateUIEvent_GetSetEnabled) :int
  (_obj :pointer))

(cffi:defcfun ("wxUpdateUIEvent_Check" wxUpdateUIEvent_Check) :void
  (_obj :pointer)
  (check :int))

(cffi:defcfun ("wxUpdateUIEvent_Enable" wxUpdateUIEvent_Enable) :void
  (_obj :pointer)
  (enable :int))

(cffi:defcfun ("wxUpdateUIEvent_SetText" wxUpdateUIEvent_SetText) :void
  (_obj :pointer)
  (text :string))
